--- a/analisis/calculo_renta_hidrocarburos.Rmd
+++ b/analisis/calculo_renta_hidrocarburos.Rmd
@@ -4,12 +4,12 @@ author:
 - affiliation: UNGS/CONICET
   name: Mateo Suster y Juan Kornblihtt
 output:
-  html_document:
-    df_print: paged
-    toc: yes
   pdf_document: 
     toc: yes
     keep_tex: yes
+  html_document:
+    df_print: paged
+    toc: yes
   html_notebook:
     toc: yes
     toc_float: yes
@@ -395,7 +395,6 @@ Sectoriales](https://www.argentina.gob.ar/economia/politicaeconomica/regionalyse
 
 ### Producción de Crudo
 
-**poner en cuanto no coincide, cuanto esta por encima o por debajo, brecha, explicar en qué año se hace el empalme en los precios **
 
 La producción de petróleo crudo de largo plazo proviene del Anuario de Combustibles, de la cual contamos datos desde 1911 hasta 1992. Sus valores para el período 1980-1992 coinciden con los de EIA, por lo cual pueden usarse como fuentes alternativas. Asimismo, la evolución de SESCO es similar a la de EIA, salvo por pequeñas divergencias entre 2008 y 2013. La serie de Regalías presenta un nivel menor que las anteriores debido a las deducciones de producción que realizan las empresas para pagar un menor nivel de Regalías hacia las provincias donde realizan la producción. Por último, la serie del Ministerio de Economía coincide con Regalías en sus primeros años, luego presenta un nivel intermedio entre Regalías y SESCO y a partir de 2009 toma a SESCO como fuente. Salvo el Anuario de Combustibles, el resto de las series presentan datos hasta los últimos años. Por lo tanto, el criterio de selección para la serie de producción con la que se realizarán los cálculos es el siguiente:
 
@@ -2506,10 +2505,6 @@ ggplotly(graf_pozos_iapg, width = 600, height = 400)
 ```
 
 
-```{r echo=FALSE, message=FALSE, warning=FALSE}
-
-```
-
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
 #pozos iapg acumulados
@@ -3863,10 +3858,12 @@ var((read_csv("C:/Archivos/Datos/Balances/gas y petroleo_datos/datos_r/resultado
 ```
 
 
+
+
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
 #CCNN (datos oficiales)
-ccnn_oficial <- read_excel("C:/Archivos/Datos/Hidrocarburos/Mecon/base-mineria-e-hidrocarburos cuentas nacionales.xls",
-                        sheet = "Cuentas Nacionales", skip = 5) %>% 
+## Base minería
+ccnn_oficial <- read_excel("C:/Archivos/Datos/Hidrocarburos/Mecon/base-mineria-e-hidrocarburos cuentas nacionales.xls", sheet = "Cuentas Nacionales", skip = 5) %>% 
   rename(anio = "Año",
          periodo ="Período",
         vbp_extraccion_y_servicios_hidrocarburos =  "...5",
@@ -3907,8 +3904,6 @@ ccnn_oficial <- read_excel("C:/Archivos/Datos/Hidrocarburos/Mecon/base-mineria-e
   ungroup()
 ccnn_oficial
 
-
-#con base de VBP de elaboracion propia
 mean_coef_ms <-  ccnn_oficial %>% 
   summarise(coef_ms_tot = mean(ms_tot/vbp_tot,na.rm= T),
               coef_ms_extr= mean(ms_extr/vbp_extr ,na.rm= T))
@@ -3923,6 +3918,101 @@ median_coef_ms <-  ccnn_oficial %>%
 #          coef_req_extr = mean(ci_extr_hidrocarburos/vbp_extr_hidrocarburos, na.rm=T))
 
 
+# Base INDEC
+x <- read_excel("data/indec/sh_VBP_VAB_03_21.xls", sheet = 3, skip = 3) %>% 
+  na.omit() 
+names(x) <-c("sector", 2004:2020)
+vbp_ccnn <- x %>% 
+  gather(key = anio,value = vbp_tot , 2:ncol(.))
+
+y <- read_excel("data/indec/sh_VBP_VAB_03_21.xls", sheet = 5, skip = 4) %>% 
+  select(1, contains("Total")) %>% 
+  na.omit() 
+names(y) <-c("sector", 2004:2020)
+va_ccnn <- y %>% 
+  gather(key = anio,value = va_tot , 2:ncol(.))
+
+ccnn_oficial <- va_ccnn %>% 
+  filter(grepl("Extracción de petróleo", sector)) %>% 
+  inner_join(vbp_ccnn %>% filter(grepl("Extracción de petróleo", sector)), by = c("sector", "anio")) %>% 
+  mutate(anio = as.double(anio)) %>% 
+  left_join(masa_salarial_hidrocarburos %>% 
+              select(anio,  unidad,
+                     ms_tot = masa_salarial_total_oede,
+                     ms_extr =masa_salarial_extraccion_oede ), by = c("anio")) %>% 
+  mutate(vbp_extr = vbp_tot* (1 - servicio_s_extraccion),
+         va_extr = va_tot* (1 - servicio_s_extraccion),
+         ci_tot = vbp_tot - va_tot,
+         ci_extr = vbp_extr  - va_extr,
+         ebe_tot =va_tot-ms_tot,
+         ebe_extr = va_extr -ms_extr,
+         unidad = "Millones de pesos corrientes",
+          fuente = "CCNN oficial" ) %>% 
+  select(anio, unidad, fuente, everything(.), -sector)
+
+## VA y VBP precios 93
+x <- read_excel("C:/Archivos/repos/hidrocarburos/analisis/data/mecon/PBI_Base 1993_PM.xlsx", 
+    sheet = "VBP c", col_types = c("text", 
+        "numeric", "numeric", "numeric", 
+        "numeric", "numeric", "numeric", 
+        "numeric", "numeric", "numeric", 
+        "numeric", "numeric", "numeric", 
+        "numeric", "numeric", "numeric", 
+        "numeric", "numeric", "numeric", 
+        "numeric", "numeric", "numeric", 
+        "numeric", "numeric", "numeric", 
+        "numeric", "numeric", "numeric", 
+        "numeric", "numeric", "numeric", 
+        "numeric", "numeric", "numeric", 
+        "numeric", "numeric", "numeric", 
+        "numeric", "numeric", "numeric", 
+        "numeric", "numeric", "numeric", 
+        "numeric", "numeric", "numeric", 
+        "numeric", "numeric", "numeric", 
+        "numeric", "numeric", "numeric", 
+        "numeric", "numeric", "numeric", 
+        "numeric", "numeric", "numeric", 
+        "numeric", "numeric", "numeric", 
+        "numeric", "numeric", "numeric", 
+        "numeric", "numeric", "numeric", 
+        "numeric", "numeric", "numeric", 
+        "numeric", "numeric", "numeric", 
+        "numeric", "numeric", "numeric", 
+        "numeric", "numeric", "numeric", 
+        "numeric", "numeric", "numeric", 
+        "numeric", "numeric", "numeric", 
+        "numeric"), skip = 6) %>% 
+    select(1, !contains("I"))
+names(x) <- c("sector", 1993:2009)
+vbp_93 <- x %>% 
+  gather(key = anio,value = vbp_tot , 2:ncol(.))
+
+y <- read_excel("C:/Archivos/repos/hidrocarburos/analisis/data/mecon/PBI_Base 1993_PM.xlsx", 
+    sheet = "VAB c", skip = 6) %>% 
+    select(1, !contains("I"))
+names(y) <- c("sector", 1993:2009)
+va_93 <- y %>% 
+  gather(key = anio,value = va_tot , 2:ncol(.))
+
+valor_produccion_93 <- va_93 %>%  inner_join(vbp_93) %>% 
+  mutate(anio = as.double(anio))
+
+consumo_intermedio_93 <- valor_produccion_93 %>% 
+  filter(grepl("C - EXPLOTACION DE MINAS Y CANTERAS", sector)) %>% 
+  mutate(coef_tec_93 = 1-(va_tot/vbp_tot))
+  
+## Serie de CI
+# < 1997 : MIP 97
+# 97 a 2004 : progresion de mip97 a indec
+# 2004 a 2019: indec
+consumo_intermedio <- data.frame(anio = 1960:2020) %>%
+  left_join(ccnn_oficial %>%  select(anio, vbp_tot, va_tot), by = "anio") %>% 
+  left_join(consumo_intermedio_93 %>% select(anio, coef_tec_93)) %>% 
+  mutate(coef_ci = case_when( anio >= 2004 ~ 1-(va_tot/vbp_tot),
+                              anio < 2004 ~ coef_tec_93 ),
+         coef_ci = imputeTS::na.interpolation(coef_ci, option = "linear" )) %>% 
+  select(anio, coef_ci)
+consumo_intermedio
 ```
 
 ### Estimaciones propias 
@@ -3953,6 +4043,7 @@ precios_y_cantidades <- prod_merge_crudo %>%
 
 ## Criterio CCNN 
 criterio_ccnn <- precios_y_cantidades %>% 
+  left_join(consumo_intermedio) %>% 
   mutate(crudo_mdo_interno = prod_crudo - expo_crudo,
          expo_gas = replace_na(expo_gas, 0 ),
          gas_mdo_interno = prod_gas - expo_gas,
@@ -3964,14 +4055,14 @@ criterio_ccnn <- precios_y_cantidades %>%
                                + gas_mdo_interno * precio_gas_mdoint 
                                +expo_gas*precio_expo_gas_comtrade )*tcc)/10^6,
          vbp_extr =vbp_tot*(1-servicio_s_extraccion),
-         ci_tot = vbp_tot *coef_tecnico_97$`Extracción de petróleo, gas, carbón y uranio` ,
-         ci_extr = vbp_extr * coef_tecnico_97$`Extracción de petróleo, gas, carbón y uranio`,
+         ci_tot = vbp_tot *coef_ci ,
+         ci_extr = vbp_extr * coef_ci,
         va_tot=   vbp_tot - ci_tot,
         va_extr=   vbp_extr - ci_extr,
         ms_extr = vbp_extr *mean_coef_ms$coef_ms_extr,
          ms_tot = vbp_tot *mean_coef_ms$coef_ms_tot,
          ebe_tot = va_tot - ms_tot,
-         ebe_extr=va_extr - ms_tot     ,
+         ebe_extr=va_extr - ms_tot  ,
         fuente = "Criterio CCNN")
 criterio_ccnn
 
@@ -3989,6 +4080,7 @@ indice_vbp_criterio_ccnn <- criterio_ccnn %>%
 
 
 empalme_ccnn <- ccnn_oficial %>% 
+  left_join(consumo_intermedio) %>% 
   full_join(indice_vbp_criterio_ccnn, by = "anio") %>% 
   arrange(anio) %>% 
   mutate(vbp_extr = case_when(anio < 2004 ~ ccnn_oficial$vbp_extr[ccnn_oficial$anio == 2004] * vbp_criterio_ccnn_04,
@@ -3998,10 +4090,10 @@ empalme_ccnn <- ccnn_oficial %>%
                            anio > 2012 ~ ccnn_oficial$vbp_tot[ccnn_oficial$anio == 2012]  * vbp_criterio_ccnn_12,
                            T ~ vbp_tot),
     ci_extr = case_when( (anio < 2004) | (anio > 2012)  ~ 
-                                 vbp_extr *coef_tecnico_97$`Extracción de petróleo, gas, carbón y uranio`  ,
+                                 vbp_extr *coef_ci  ,
                                T ~ ci_extr),
     ci_tot = case_when( (anio < 2004) | (anio > 2012)  ~ 
-                                 vbp_tot *coef_tecnico_97$`Extracción de petróleo, gas, carbón y uranio`  ,
+                                 vbp_tot *coef_ci  ,
                                T ~ ci_tot) ,
     va_tot = case_when(is.na(va_tot) ~ vbp_tot - ci_tot ,
                                    T ~ va_tot),
@@ -4047,10 +4139,11 @@ filtro <- c("anio", "unidad", "fuente", "vbp_tot", "vbp_extr",
             "va_tot",  "va_extr" , "ebe_tot", "ebe_extr"  )
 
 valor_total_produccion <- ccnn_oficial %>% 
+  select(filtro) %>% 
   rbind(criterio_ccnn %>%select(filtro)) %>% 
   rbind(empalme_ccnn %>% select(filtro)) %>% 
   rbind(criterio_propio %>% select(filtro)) %>% 
-  gather(key = variable, value=valor, 3:12) %>% 
+  gather(key = variable, value=valor, 4:12) %>% 
   left_join(ipc_promedio %>% select(anio, ipc_18)) %>%
   mutate(valor = valor /ipc_18,
          unidad = "Millones de pesos de 2018")
@@ -4459,6 +4552,7 @@ Donde:
 * $TCC$ = Tipo de Cambio Comercial
 
 ```{r echo=FALSE}
+
 renta_tcp_crudo <-  renta_dif_precios_crudo %>%
   left_join(expo_usd_crudo %>% 
               select(anio, expo_crudo_usd = expo_crudo, unidad_expo = unidad )) %>% 
@@ -5051,7 +5145,9 @@ coeficientes <- list("Proporción de los servicios sobre extraccion" = servicio_
                      "Impuestos promedios MIP 97" = imp_prom_97,
                      "Coeficiente tecnico MIP 97" = coef_tecnico_97,
                      "Proporción de la Masa Salarial total promedio 2004-2012"= mean_coef_ms$coef_ms_tot,
-                     "Proporción de la Masa Salarial extraccion promedio 2004-2012"= mean_coef_ms$coef_ms_extr)
+                     "Proporción de la Masa Salarial extraccion promedio 2004-2012"= mean_coef_ms$coef_ms_extr,
+                     "Coeficiente consumo intermedio (Año)" =consumo_intermedio$anio,
+                     "Coeficiente consumo intermedio (1- VA/VBP)" =consumo_intermedio$coef_ci)
 
 capture.output(coeficientes, file = "resultados/argentina/coeficientes.txt")
 
